# kaldi-gop

./: .gitignore  README.md  build.sh
egs/gop-compute/: path.sh  run.sh
src/: CMakeLists.txt
src/gop/: gmm-gop.cc  gmm-gop.h
src/gopbin/: compute-gmm-gop.cc
utils/: clang-format.sh
